# geo-auditor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
geo_auditor/: __init__.py  batch.py  cli.py  config.py  diff.py  fetch.py  llms_txt.py  models.py  parse.py  remediate.py  report.py  score.py
geo_auditor/rules/: __init__.py  authority.py  base.py  freshness.py  machine.py  multimedia.py  readability.py  structure.py
tests/: conftest.py  test_batch.py  test_cli.py  test_config.py  test_diff.py  test_fetch.py  test_llms_txt.py  test_parse.py  test_remediate.py  test_report.py  test_rules.py  test_score.py
tests/fixtures/: strong_page.html  weak_page.md
