[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-auditor"
version = "0.1.0"
description = "Score how likely AI answer engines (ChatGPT, Perplexity, Gemini, Google AI Overviews) are to cite your content - GEO/AEO readiness, keyless and offline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "baronguyen001" }]
keywords = [
    "geo",
    "aeo",
    "generative-engine-optimization",
    "answer-engine-optimization",
    "seo",
    "llm",
    "llms-txt",
    "content-audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "markdown>=3.5",
]

[project.urls]
Homepage = "https://github.com/baronguyen001/geo-auditor"
Repository = "https://github.com/baronguyen001/geo-auditor"
Issues = "https://github.com/baronguyen001/geo-auditor/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
geo-audit = "geo_auditor.cli:main"

[tool.setuptools.packages.find]
include = ["geo_auditor*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4", "S"]
ignore = ["SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["bs4.*", "markdown.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=geo_auditor --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
